--- a/templates/default/events.html.twig
+++ b/templates/default/events.html.twig
@@ -14,7 +14,7 @@
         'allowed': ['blockquote', 'embed', 'featurette', 'gallery-carousel', 'gallery-folder',
             'gallery-single-images', 'headlines', 'horizontal-line', 'icon-teaser-row', 'image',
             'image-hotspot-marker', 'pdf', 'product-grid', 'product-teaser', 'standard-teaser', 'text-accordion',
-            'time-slider-featurette', 'video', 'wysiwyg', 'wysiwyg-with-images']
+            'time-slider-featurette', 'video', 'wysiwyg', 'wysiwyg-with-images', 'drop']
     }) }}
     <div  id="vueapp" class="row">
         <div class="col-md-12">
