--- a/templates/areas/video-gallery/view.html.twig
+++ b/templates/areas/video-gallery/view.html.twig
@@ -17,12 +17,12 @@
 {% set itemCount = itemCountSelect.getData() | default(1) %}
 
 {% if editmode %}
-<div class="alert alert-secondary col-xs-12" style="height: 75px">
-    <div class="col-xs-6 d-inline mx-auto">
-        <span class="editmode-label align-middle">How many video you want to show?</span>
-        {{ itemCountSelect | raw }}
+    <div class="alert alert-secondary col-xs-12" style="height: 75px">
+        <div class="col-xs-6 d-inline mx-auto">
+            <span class="editmode-label align-middle">How many video you want to show?</span>
+            {{ itemCountSelect | raw }}
+        </div>
     </div>
-</div>
 {%  endif %}
 
 <table>
@@ -30,47 +30,22 @@
         <tr>
             <td>
                 <div class="cms_video_block">
-                    {% if editmode %}
-                        {% set video = pimcore_video('video' ~ i, {
-                            attributes: {
-                                class: 'video-js vjs-default-skin',
-                            },
-                            thumbnail: 'width' ~ defaultWidth,
-                            width: defaultWidth,
-                            editmodeImagePreview: true,
-                            })
-                        %}
+                    {% set video = pimcore_video('video' ~ i, {
+                        attributes: {
+                            class: 'video-js vjs-default-skin',
+                        },
+                        thumbnail: 'width' ~ defaultWidth,
+                        width: defaultWidth,
+                        editmodeImagePreview: editmode,
+                    })
+                    %}
 
-                        <!-- replace uri only for asset video -->
-                        {% if (not video.isEmpty()) and (video.getVideoType() == 'asset') %}
-                            <!-- uri for first frame of video -->
-                            {% set firstFrameUri = path(
-                                'pimcore_admin_asset_getvideothumbnail',
-                                {
-                                    id: video.id,
-                                    width: defaultWidth,
-                                    time: 0
-                                })
-                            %}
-                            <!-- replace generated url to thumbnail by our firstFrameUri -->
-                            {% set p1 = video | split('<img') %}
-                            {% set p2 = p1[1] | split('/>') %}
-                            {% set video = p1[0] ~ '<img width="' ~ defaultWidth ~ '" src="' ~ firstFrameUri ~ '"/>' ~ p2[1] %}
-                        {% endif %}
-
-                        {{ video | raw }}
-
-                    {% else %}
-                        {{
-                            pimcore_video('video' ~ i, {
-                                attributes: {
-                                    class: 'video-js vjs-default-skin vjs-big-play-centered'
-                                },
-                                thumbnail: 'width' ~ defaultWidth,
-                                width: defaultWidth,
-                            })
-                        }}
+                    <!-- show first frame -->
+                    {% if editmode and (not video.isEmpty()) and (video.getVideoType() == 'asset') %}
+                        {% do video.getVideoAsset().setCustomSetting('image_thumbnail_time', 0) %}
                     {% endif %}
+
+                    {{ video | raw }}
                 </div>
             </td>
         </tr>
